# glob

./: .gitignore  CMakeLists.txt  cifuzz.yaml
cifuzz-spark/: CMakeLists.txt  fuzz_compile_pattern_to_regex.cpp
cmake/: CPM.cmake
include/glob/: glob.h
single_include/glob/: glob.hpp
source/: glob.cpp
standalone/: CMakeLists.txt
test/: compile_pattern_test.cpp
